// Billing Service ERD
// Service: billing-service (gộp payment + wallet)
// Database: billing_db
// Người 3 (phần còn lại)

// API Examples with Idempotency:
// POST /wallets/{id}/topup
//   - Headers: X-Idempotency-Key: "topup_2024_001"
//   - Body: { "amount": 100000, "currency": "VND" }
//
// POST /wallets/{id}/debit
//   - Headers: X-Idempotency-Key: "debit_payment_12345"
//   - Body: { "amount": 50000, "currency": "VND", "payment_id": "uuid" }
//
// POST /payments
//   - Headers: X-Idempotency-Key: "payment_installment_67890"
//   - Body: { "installment_id": "uuid", "amount": 200000, "payment_method": "wallet" }
//
// Events: wallet.debited|refunded, payment.completed|failed

Table wallets {
  wallet_id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [unique, not null, note: 'Soft reference to identity-service']
  balance decimal(14,2) [default: 0]
  currency currency_type [default: 'VND']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  created_by varchar(255)
  updated_by varchar(255)
  
  Note: 'Ví điện tử của người dùng. Mỗi user có 1 ví duy nhất. Extends BaseEntity.'
  
  indexes {
    user_id [unique]
    currency
  }
}

Table wallet_transactions {
  wallet_tx_id uuid [pk, default: `gen_random_uuid()`]
  wallet_id uuid [ref: > wallets.wallet_id, not null]
  tx_type wallet_tx_type [not null]
  amount decimal(14,2) [not null]
  currency currency_type [default: 'VND']
  balance_before decimal(14,2) [not null]
  balance_after decimal(14,2) [not null]
  metadata jsonb
  
  // Truy vết giao dịch đến thực thể
  contract_id uuid [note: 'Soft reference to project-service']
  milestone_id uuid [note: 'Soft reference to project-service - contract_milestones']
  booking_id uuid [note: 'Soft reference to project-service']
  submission_id uuid [note: 'Soft reference to project-service - file_submissions (optional, for revision fee tracking)']
  refund_of_wallet_tx_id uuid [ref: > wallet_transactions.wallet_tx_id, unique, note: '1:1 refund relationship - unique constraint']
  
  created_at timestamp [default: `now()`, not null]
  
  Note: 'Sổ cái giao dịch ví. Ghi nhận mọi biến động số dư với balance_before/after để audit. Truy vết đến contract/milestone/booking để audit trail đầy đủ. Refund relationship là 1:1 (unique constraint).'
  
  indexes {
    wallet_id
    tx_type
    currency
    contract_id
    milestone_id
    booking_id
    refund_of_wallet_tx_id
    created_at
  }
}

// Table contract_installments - ĐÃ XÓA
// Đã được thay thế hoàn toàn bởi contract_milestones trong project-service
// contract_milestones quản lý cả công việc và thanh toán trong cùng một entity

Table payment_orders {
  payment_order_id uuid [pk, default: `gen_random_uuid()`]
  wallet_id uuid [ref: > wallets.wallet_id, not null]
  amount decimal(14,2) [not null]
  currency currency_type [default: 'VND']
  status payment_order_status [default: 'pending']
  sepay_transaction_id varchar(255)
  virtual_account varchar(255)
  qr_code_url varchar(1000)
  callback_data jsonb
  description text
  expires_at timestamp
  created_at timestamp [not null]
  updated_at timestamp
  completed_at timestamp
  created_by varchar(255)
  updated_by varchar(255)
  
  Note: 'Payment orders for topup via SePay - 1:N với wallets'
  
  indexes {
    wallet_id
    status
    virtual_account
    created_at
  }
}

Table outbox_events {
  event_id uuid [pk, default: `gen_random_uuid()`]
  aggregate_id uuid [not null]
  aggregate_type text [not null]
  event_type text [not null]
  event_payload jsonb [not null]
  occurred_at timestamptz [not null, default: `now()`]
  published_at timestamptz
  retry_count integer [not null, default: 0]
  last_error text
  next_retry_at timestamptz
  trace_id text
  correlation_id text
  
  Note: 'Event publishing'
  
  indexes {
    aggregate_id
    aggregate_type
    event_type
    occurred_at
    (next_retry_at)
  }
}

Table consumed_events {
  event_id uuid [not null]
  consumer_name text [not null]
  processed_at timestamptz [not null, default: `now()`]
  
  Note: 'Idempotency - PK(event_id, consumer_name), INSERT ... ON CONFLICT DO NOTHING'
  
  indexes {
    (event_id, consumer_name) [unique, pk]
    consumer_name
    processed_at
  }
}

// Enums
Enum currency_type {
  VND
  USD
  EUR
}

Enum wallet_tx_type {
  topup
  payment
  refund
  withdrawal
  adjustment
  revision_fee
}

Enum payment_order_status {
  pending
  processing
  completed
  failed
  expired
  cancelled
}

Enum payment_method {
  credit_card
  debit_card
  bank_transfer
  digital_wallet
  wallet
  cash
}

Enum payment_status {
  not_required
  pending
  processing
  completed
  failed
  refunded
  cancelled
}

// Enum installment_status - ĐÃ XÓA
// Đã được thay thế bởi milestone_payment_status trong project-service

// Enum gate_condition - ĐÃ XÓA
// Đã được thay thế bởi logic tự động trong contract_milestones